--- a/register.html
+++ b/register.html
@@ -43,6 +43,9 @@
         </div>
 
     </div>
+    <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-analytics.js"></script>
+    <script src="/js/firebase.js"></script>
     <script src="/js/register.js"></script>
 </body>
 
